# BotForwarding_FastAPI

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml
app/api/migrations/: env.py
app/api/migrations/versions/: 0019f63a3088_change_user_model.py  0d18e70b7a1a_create_session_model.py  1455980480e9_add_url_for_media.py  14a236caed8a_change_post_an_mediafile_models.py  22551413e4ed_remove_uselist.py  23cac42e08dc_change_post_model.py  3cd03b611e39_add_urltype_for_media.py  82312431bf88_change_user_model.py  95281c881af0_add_users.py  bbd6e811120c_create_database.py  cf9dbee89d33_add_optional_mediafiles.py  fa5c0bd92f57_add_target_to_post.py  fd3dcafd29b3_add_lazy.py
app/api/posts/: admin.py  exceptions.py  models.py  schemas.py  tools.py  views.py
app/api/users/: admin.py  authentication.py  models.py
app/client/: config.py  create_session.py  exceptions.py  handlers.py  interface.py  models.py  utils.py
app/core/: container.py  settings.py
app/db/: session.py
app/db/repository/: base.py  media.py  post.py  session.py  target.py  user.py
app/db/service/: media_service.py  post_service.py  session_service.py  target_service.py  user_service.py
sqladmin_patch/: application.py  list.html  login.html
