[tool.poetry]
name = "botforwarding-fastapi"
version = "0.1.0"
description = ""
authors = ["komediantto <komediantto@yandex.ru>"]
readme = "README.md"
packages = [{include = "botforwarding_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
pyrogram = "^2.0.106"
fastapi = "^0.95.2"
sqladmin = "^0.10.3"
requests = "^2.30.0"
sqlalchemy = "^2.0.14"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
uvicorn = "^0.22.0"
psycopg2-binary = "^2.9.6"
dependency-injector = "^4.41.0"
sqlalchemy-fields = "^0.4.0"
fastapi-events = "^0.9.0"
passlib = "^1.7.4"
nest-asyncio = "^1.5.6"
tgcrypto = "^1.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
